# HabitatAgent

./: .gitignore  README.md  hello.py  main.py  pyproject.toml  requirements.txt  sample_listings.txt  setup.py
.virtual_documents/agents/: agent.ipynb  langchainTest.ipynb
LlmProviders/: GoogleLangchain.py
V2/: params.yaml
V2/agentsV2/host/: agent.py  (+3 more)
V2/db/: connection.py
agents/: ListingParser.py  Prompts.py  RootAgent.py  agent.ipynb  agent_tools.py  agents.py  langchainTest.ipynb  scam_checker.py  test.ipynb
agents/alert/: __main__.py  agent.py  agent_executor.py  descriptions.txt  instructions.txt
agents/host/: __main__.py  agent.py  agent_executor.py  descriptions.txt  instructions.txt
agents/listing/: descriptions.txt  instructions.txt
agents/listings/: __main__.py  agent.py  agent_executor.py  descriptions.txt  instructions.txt
agents/memory/: __init__.py  context_protocol.py  procedural_store.py  session_manager.py
agents/search/: __main__.py  agent.py  agent_executor.py  instructions.txt
agentsV1/: ListingParser.py  RootAgent.py  agent_tools.py  scam_checker.py
app/cmd/: cmd.py
database/: mongo_client.py  mongodb_client.py
db/: redis_client.py
listingParser/: AgentWorkflows  HouseParser.py  MongoDB.py  Prompts.py  duplicates.py
listingParser/models/: ListingInfo.py
listingRetrieval/: retrieval.py
mcp_servers/alert_email/: server.py
mcp_servers/listings_mdb/: server.py
mcp_servers/searching/: server.py
twilio/: TwilioMessage.py  reciver.py
twilio_service/: .twilio.env  TwilioMessage.py  reciver.py
webapp/: server.py
(+30 files in other folders)
