[project]
name = "nestquest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.3.10",
    "fastmcp>=2.13.0.2",
    "google-adk>=1.18.0",
    "langchain>=1.0.3",
    "langchain-core>=1.0.3",
    "langchain-google-genai>=3.0.1",
    "mcp[cli]>=1.20.0",
    "pymongo>=4.15.3",
    "sentence-transformers>=5.1.2",
]
